src/parser/SourcerustParser.ts
// Generated from src/Sourcerust.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { SourcerustListener } from "./SourcerustListener.js";
import { SourcerustVisitor } from "./SourcerustVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class SourcerustParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly FN = 24;
    public static readonly LET = 25;
    public static readonly RETURN = 26;
    public static readonly WHILE = 27;
    public static readonly FOR = 28;
    public static readonly IN = 29;
    public static readonly MUT = 30;
    public static readonly VEC = 31;
    public static readonly U16 = 32;
    public static readonly STR = 33;
    public static readonly IF = 34;
    public static readonly ELSE = 35;
    public static readonly ARROW = 36;
    public static readonly IDENT = 37;
    public static readonly INT = 38;
    public static readonly STRING = 39;
    public static readonly CHAR_LITERAL = 40;
    public static readonly TRUE = 41;
    public static readonly FALSE = 42;
    public static readonly WS = 43;
    public static readonly COMMENT = 44;
    public static readonly RULE_prog = 0;
    public static readonly RULE_type = 1;
    public static readonly RULE_block = 2;
    public static readonly RULE_stmt = 3;
    public static readonly RULE_function = 4;
    public static readonly RULE_paramList = 5;
    public static readonly RULE_param = 6;
    public static readonly RULE_refModifier = 7;
    public static readonly RULE_mutModifier = 8;
    public static readonly RULE_emptyStmt = 9;
    public static readonly RULE_letStmt = 10;
    public static readonly RULE_condStmt = 11;
    public static readonly RULE_derefExpr = 12;
    public static readonly RULE_assignStmt = 13;
    public static readonly RULE_returnStmt = 14;
    public static readonly RULE_whileStmt = 15;
    public static readonly RULE_exprStmt = 16;
    public static readonly RULE_expression = 17;
    public static readonly RULE_literal = 18;

    public static readonly literalNames = [
        null, "'&'", "'['", "']'", "'{'", "'}'", "'('", "')'", "','", "':'", 
        "';'", "'='", "'*'", "'/'", "'+'", "'-'", "'%'", "'<'", "'<='", 
        "'>='", "'>'", "'=='", "'!='", "'!'", "'fn'", "'let'", "'return'", 
        "'while'", "'for'", "'in'", "'mut'", "'vec'", "'u16'", "'str'", 
        "'if'", "'else'", "'->'", null, null, null, null, "'true'", "'false'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, "FN", "LET", "RETURN", "WHILE", "FOR", "IN", "MUT", 
        "VEC", "U16", "STR", "IF", "ELSE", "ARROW", "IDENT", "INT", "STRING", 
        "CHAR_LITERAL", "TRUE", "FALSE", "WS", "COMMENT"
    ];
    public static readonly ruleNames = [
        "prog", "type", "block", "stmt", "function", "paramList", "param", 
        "refModifier", "mutModifier", "emptyStmt", "letStmt", "condStmt", 
        "derefExpr", "assignStmt", "returnStmt", "whileStmt", "exprStmt", 
        "expression", "literal",
    ];

    public get grammarFileName(): string { return "Sourcerust.g4"; }
    public get literalNames(): (string | null)[] { return SourcerustParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return SourcerustParser.symbolicNames; }
    public get ruleNames(): string[] { return SourcerustParser.ruleNames; }
    public get serializedATN(): number[] { return SourcerustParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, SourcerustParser._ATN, SourcerustParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public prog(): ProgContext {
        let localContext = new ProgContext(this.context, this.state);
        this.enterRule(localContext, 0, SourcerustParser.RULE_prog);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 41;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2399147074) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 505) !== 0)) {
                {
                {
                this.state = 38;
                this.stmt();
                }
                }
                this.state = 43;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 44;
            this.match(SourcerustParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public type_(): TypeContext;
    public type_(_p: number): TypeContext;
    public type_(_p?: number): TypeContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new TypeContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 2;
        this.enterRecursionRule(localContext, 2, SourcerustParser.RULE_type, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 54;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case SourcerustParser.U16:
                {
                this.state = 47;
                this.match(SourcerustParser.U16);
                }
                break;
            case SourcerustParser.STR:
                {
                this.state = 48;
                this.match(SourcerustParser.STR);
                }
                break;
            case SourcerustParser.T__0:
                {
                this.state = 49;
                this.match(SourcerustParser.T__0);
                this.state = 51;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 30) {
                    {
                    this.state = 50;
                    this.match(SourcerustParser.MUT);
                    }
                }

                this.state = 53;
                this.type_(2);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 61;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    {
                    localContext = new TypeContext(parentContext, parentState);
                    this.pushNewRecursionContext(localContext, _startState, SourcerustParser.RULE_type);
                    this.state = 56;
                    if (!(this.precpred(this.context, 1))) {
                        throw this.createFailedPredicateException("this.precpred(this.context, 1)");
                    }
                    this.state = 57;
                    this.match(SourcerustParser.T__1);
                    this.state = 58;
                    this.match(SourcerustParser.T__2);
                    }
                    }
                }
                this.state = 63;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public block(): BlockContext {
        let localContext = new BlockContext(this.context, this.state);
        this.enterRule(localContext, 4, SourcerustParser.RULE_block);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 64;
            this.match(SourcerustParser.T__3);
            this.state = 68;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2399147074) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 505) !== 0)) {
                {
                {
                this.state = 65;
                this.stmt();
                }
                }
                this.state = 70;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 71;
            this.match(SourcerustParser.T__4);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public stmt(): StmtContext {
        let localContext = new StmtContext(this.context, this.state);
        this.enterRule(localContext, 6, SourcerustParser.RULE_stmt);
        try {
            this.state = 81;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 73;
                this.letStmt();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 74;
                this.assignStmt();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 75;
                this.returnStmt();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 76;
                this.whileStmt();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 77;
                this.exprStmt();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 78;
                this.function_();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 79;
                this.emptyStmt();
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 80;
                this.condStmt();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public function_(): FunctionContext {
        let localContext = new FunctionContext(this.context, this.state);
        this.enterRule(localContext, 8, SourcerustParser.RULE_function);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 83;
            this.match(SourcerustParser.FN);
            this.state = 84;
            this.match(SourcerustParser.IDENT);
            this.state = 85;
            this.match(SourcerustParser.T__5);
            this.state = 87;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1 || _la === 30 || _la === 37) {
                {
                this.state = 86;
                this.paramList();
                }
            }

            this.state = 89;
            this.match(SourcerustParser.T__6);
            this.state = 91;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 36) {
                {
                this.state = 90;
                this.match(SourcerustParser.ARROW);
                }
            }

            this.state = 94;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1 || _la === 32 || _la === 33) {
                {
                this.state = 93;
                this.type_(0);
                }
            }

            this.state = 96;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public paramList(): ParamListContext {
        let localContext = new ParamListContext(this.context, this.state);
        this.enterRule(localContext, 10, SourcerustParser.RULE_paramList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 98;
            this.param();
            this.state = 103;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 8) {
                {
                {
                this.state = 99;
                this.match(SourcerustParser.T__7);
                this.state = 100;
                this.param();
                }
                }
                this.state = 105;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public param(): ParamContext {
        let localContext = new ParamContext(this.context, this.state);
        this.enterRule(localContext, 12, SourcerustParser.RULE_param);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 107;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 1) {
                {
                this.state = 106;
                this.refModifier();
                }
            }

            this.state = 110;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 30) {
                {
                this.state = 109;
                this.mutModifier();
                }
            }

            this.state = 112;
            this.match(SourcerustParser.IDENT);
            this.state = 113;
            this.match(SourcerustParser.T__8);
            this.state = 114;
            this.type_(0);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public refModifier(): RefModifierContext {
        let localContext = new RefModifierContext(this.context, this.state);
        this.enterRule(localContext, 14, SourcerustParser.RULE_refModifier);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 116;
            this.match(SourcerustParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public mutModifier(): MutModifierContext {
        let localContext = new MutModifierContext(this.context, this.state);
        this.enterRule(localContext, 16, SourcerustParser.RULE_mutModifier);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 118;
            this.match(SourcerustParser.MUT);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public emptyStmt(): EmptyStmtContext {
        let localContext = new EmptyStmtContext(this.context, this.state);
        this.enterRule(localContext, 18, SourcerustParser.RULE_emptyStmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 120;
            this.match(SourcerustParser.T__9);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letStmt(): LetStmtContext {
        let localContext = new LetStmtContext(this.context, this.state);
        this.enterRule(localContext, 20, SourcerustParser.RULE_letStmt);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 122;
            this.match(SourcerustParser.LET);
            this.state = 124;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 30) {
                {
                this.state = 123;
                this.match(SourcerustParser.MUT);
                }
            }

            this.state = 126;
            this.match(SourcerustParser.IDENT);
            this.state = 127;
            this.match(SourcerustParser.T__8);
            this.state = 128;
            this.type_(0);
            this.state = 131;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 11) {
                {
                this.state = 129;
                this.match(SourcerustParser.T__10);
                this.state = 130;
                this.expression(0);
                }
            }

            this.state = 133;
            this.match(SourcerustParser.T__9);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public condStmt(): CondStmtContext {
        let localContext = new CondStmtContext(this.context, this.state);
        this.enterRule(localContext, 22, SourcerustParser.RULE_condStmt);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 135;
            this.match(SourcerustParser.IF);
            this.state = 136;
            this.expression(0);
            this.state = 138;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 35) {
                {
                this.state = 137;
                this.match(SourcerustParser.ELSE);
                }
            }

            this.state = 140;
            this.expression(0);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public derefExpr(): DerefExprContext {
        let localContext = new DerefExprContext(this.context, this.state);
        this.enterRule(localContext, 24, SourcerustParser.RULE_derefExpr);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 142;
            this.match(SourcerustParser.T__11);
            this.state = 145;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case SourcerustParser.T__11:
                {
                this.state = 143;
                this.derefExpr();
                }
                break;
            case SourcerustParser.IDENT:
                {
                this.state = 144;
                this.match(SourcerustParser.IDENT);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assignStmt(): AssignStmtContext {
        let localContext = new AssignStmtContext(this.context, this.state);
        this.enterRule(localContext, 26, SourcerustParser.RULE_assignStmt);
        try {
            this.state = 156;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case SourcerustParser.T__0:
            case SourcerustParser.T__5:
            case SourcerustParser.VEC:
            case SourcerustParser.IDENT:
            case SourcerustParser.INT:
            case SourcerustParser.STRING:
            case SourcerustParser.CHAR_LITERAL:
            case SourcerustParser.TRUE:
            case SourcerustParser.FALSE:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 147;
                this.expression(0);
                this.state = 148;
                this.match(SourcerustParser.T__10);
                this.state = 149;
                this.expression(0);
                this.state = 150;
                this.match(SourcerustParser.T__9);
                }
                break;
            case SourcerustParser.T__11:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 152;
                this.derefExpr();
                this.state = 153;
                this.match(SourcerustParser.T__10);
                this.state = 154;
                this.expression(0);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public returnStmt(): ReturnStmtContext {
        let localContext = new ReturnStmtContext(this.context, this.state);
        this.enterRule(localContext, 28, SourcerustParser.RULE_returnStmt);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 158;
            this.match(SourcerustParser.RETURN);
            this.state = 160;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2147483714) !== 0) || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & 63) !== 0)) {
                {
                this.state = 159;
                this.expression(0);
                }
            }

            this.state = 162;
            this.match(SourcerustParser.T__9);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public whileStmt(): WhileStmtContext {
        let localContext = new WhileStmtContext(this.context, this.state);
        this.enterRule(localContext, 30, SourcerustParser.RULE_whileStmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 164;
            this.match(SourcerustParser.WHILE);
            this.state = 165;
            this.expression(0);
            this.state = 166;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public exprStmt(): ExprStmtContext {
        let localContext = new ExprStmtContext(this.context, this.state);
        this.enterRule(localContext, 32, SourcerustParser.RULE_exprStmt);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 168;
            this.expression(0);
            this.state = 169;
            this.match(SourcerustParser.T__9);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public expression(): ExpressionContext;
    public expression(_p: number): ExpressionContext;
    public expression(_p?: number): ExpressionContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ExpressionContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 34;
        this.enterRecursionRule(localContext, 34, SourcerustParser.RULE_expression, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 214;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 23, this.context) ) {
            case 1:
                {
                localContext = new VecMacroContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 172;
                this.match(SourcerustParser.VEC);
                this.state = 173;
                this.match(SourcerustParser.T__22);
                this.state = 174;
                this.match(SourcerustParser.T__1);
                this.state = 183;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2147483714) !== 0) || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & 63) !== 0)) {
                    {
                    this.state = 175;
                    this.expression(0);
                    this.state = 180;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    while (_la === 8) {
                        {
                        {
                        this.state = 176;
                        this.match(SourcerustParser.T__7);
                        this.state = 177;
                        this.expression(0);
                        }
                        }
                        this.state = 182;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                    }
                    }
                }

                this.state = 185;
                this.match(SourcerustParser.T__2);
                }
                break;
            case 2:
                {
                localContext = new RefContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 186;
                this.match(SourcerustParser.T__0);
                this.state = 188;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 30) {
                    {
                    this.state = 187;
                    this.match(SourcerustParser.MUT);
                    }
                }

                this.state = 190;
                this.match(SourcerustParser.IDENT);
                }
                break;
            case 3:
                {
                localContext = new FuncCallContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 191;
                this.match(SourcerustParser.IDENT);
                this.state = 192;
                this.match(SourcerustParser.T__5);
                this.state = 201;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2147483714) !== 0) || ((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & 63) !== 0)) {
                    {
                    this.state = 193;
                    this.expression(0);
                    this.state = 198;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    while (_la === 8) {
                        {
                        {
                        this.state = 194;
                        this.match(SourcerustParser.T__7);
                        this.state = 195;
                        this.expression(0);
                        }
                        }
                        this.state = 200;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                    }
                    }
                }

                this.state = 203;
                this.match(SourcerustParser.T__6);
                }
                break;
            case 4:
                {
                localContext = new ParensContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 204;
                this.match(SourcerustParser.T__5);
                this.state = 205;
                this.expression(0);
                this.state = 206;
                this.match(SourcerustParser.T__6);
                }
                break;
            case 5:
                {
                localContext = new IntLiteralContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 208;
                this.match(SourcerustParser.INT);
                }
                break;
            case 6:
                {
                localContext = new StringLiteralContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 209;
                this.match(SourcerustParser.STRING);
                }
                break;
            case 7:
                {
                localContext = new TrueKeywordContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 210;
                this.match(SourcerustParser.TRUE);
                }
                break;
            case 8:
                {
                localContext = new FalseKewordContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 211;
                this.match(SourcerustParser.FALSE);
                }
                break;
            case 9:
                {
                localContext = new CharLiteralContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 212;
                this.match(SourcerustParser.CHAR_LITERAL);
                }
                break;
            case 10:
                {
                localContext = new IdentifierContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 213;
                this.match(SourcerustParser.IDENT);
                }
                break;
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 256;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 25, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 254;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 24, this.context) ) {
                    case 1:
                        {
                        localContext = new MulContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, SourcerustParser.RULE_expression);
                        this.state = 216;
                        if (!(this.precpred(this.context, 22))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 22)");
                        }
                        this.state = 217;
                        this.match(SourcerustParser.T__11);
                        this.state = 218;
                        this.expression(23);
                        }
                        break;
                    case 2:
                        {
                        localContext = new DivContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, SourcerustParser.RULE_expression);
                        this.state = 219;
                        if (!(this.precpred(this.context, 21))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 21)");
                        }
                        this.state = 220;
                        this.match(SourcerustParser.T__12);
                        this.state = 221;
                        this.expression(22);
                        }
                        break;
                    case 3:
                        {
                        localContext = new AddContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, SourcerustParser.RULE_expression);
                        this.state = 222;
                        if (!(this.precpred(this.context, 20))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 20)");
                        }
                        this.state = 223;
                        this.match(SourcerustParser.T__13);
                        this.state = 224;
                        this.expression(21);
                        }
                        break;
                    case 4:
                        {
                        localContext = new SubContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, SourcerustParser.RULE_expression);
                        this.state = 225;
                        if (!(this.precpred(this.context, 19))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 19)");
                        }
                        this.state = 226;
                        this.match(SourcerustParser.T__14);
                        this.state = 227;
                        this.expression(20);
                        }
                        break;
                    case 5:
                        {
                        localContext = new ModContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, SourcerustParser.RULE_expression);
                        this.state = 228;
                        if (!(this.precpred(this.context, 18))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 18)");
                        }
                        this.state = 229;
                        this.match(SourcerustParser.T__15);
                        this.state = 230;
                        this.expression(19);
                        }
                        break;
                    case 6:
                        {
                        localContext = new LtExprContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, SourcerustParser.RULE_expression);
                        this.state = 231;
                        if (!(this.precpred(this.context, 17))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 17)");
                        }
                        this.state = 232;
                        this.match(SourcerustParser.T__16);
                        this.state = 233;
                        this.expression(18);
                        }
                        break;
                    case 7:
                        {
                        localContext = new LeqExprContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, SourcerustParser.RULE_expression);
                        this.state = 234;
                        if (!(this.precpred(this.context, 16))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 16)");
                        }
                        this.state = 235;
                        this.match(SourcerustParser.T__17);
                        this.state = 236;
                        this.expression(17);
